--- a/e2e-with-testcafe/package.json
+++ b/e2e-with-testcafe/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@ffmpeg-installer/ffmpeg": "^1.1.0",
     "testcafe": "^2.5.0"
   },
   "devDependencies": {
